Fix task progressbars not displaying properly on complete -undoes previous clipping fix

--- a/Task Progressbars.css
+++ b/Task Progressbars.css
@@ -10,11 +10,6 @@
     }
 }
 
-/* clip bar to border-radius */
-.cm-task-progress-bar {
-    /* overflow:hidden; */
-}
-
 .cm-task-progress-bar.with-number .progress-status {
     color:var(--tx2);
     font-weight:400;
